# ChelseaGarcia_PruebasHaskell

KataBowling/: Bowling.cabal  LICENSE
KataBowling/src/: Bowling.hs
KataBowling/test/: Tests.hs
KataFizzBuzz/: FizzBuzz.cabal
KataFizzBuzz/src/: FizzBuzz.hs
KataFizzBuzz/test/: Tests.hs
