cabal-version:      >=1.10

name:               Bowling
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            BSD-3-Clause

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Andres Marzal

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         amarzal AT uji.es

-- A copyright notice.
-- copyright:

-- The category of the package.
-- category:

build-type:         Simple

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

library
  exposed-modules:   Bowling

  -- Other library packages from which modules are imported.
  build-depends:     base >=4.8

  -- Directories containing source files.
  hs-source-dirs:    src

  -- Base language which the package is written in.
  default-language:  Haskell2010

test-suite test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  build-depends:     base
                    , tasty
                    , tasty-hunit
                    , Bowling
  main-is:           Tests.hs
  default-language:  Haskell2010
