cabal-version:      3.0
name:               FizzBuzz
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Chelsea
maintainer:         s22120160@alumnos.itsur.edu.mx
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  FizzBuzz
    build-depends:    base ^>=4.21.0.0
    default-language: Haskell2010

test-suite FizzBuzz-test
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Tests.hs
    build-depends:    base ^>=4.21.0.0,
                      tasty,
                      tasty-hunit,
                      FizzBuzz
    default-language: Haskell2010